--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,10 @@
+@import "base/_variables";
+
+// For main Component
 body {
-	padding: 0%;
+	margin: 0;
+	padding: 0;
 }
+
+// Components
+@import "components/particles-background";
